<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mind Data</string>
    <string name="new_node">New Node</string>
    <string name="delete_node">Delete Node</string>
    <string name="exit">Exit</string>
    <string name="new_node_txt">New Node</string>
    <string name="connect">Connect</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_chooser">Select Mind Map</string>
    <string name="menu_new">New</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_edit_title">Edit Title</string>
	<string name="title">Title</string>
	<string name="mind_data_title">Mind Data Title</string>
	<string name="set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="ok">Ok</string>
	<string name="node_label">Node Label</string>
	<string name="desc_new_button">Create a new node</string>
	<string name="desc_delete_button">Delete selected node</string>
	<string name="desc_connect_button">Toggle connect mode</string>
	<string name="desc_highlight_button">Highlights selected node</string>
	<string name="desc_edge_button">Change edge type</string>
	<string name="done">Done</string>
</resources>