<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:background="#FFAAAAAA"
        android:gravity="center"
        android:text="Mind Data Awesome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF000000" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mind_data_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    


    <EditText
        android:id="@+id/node_label_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title" >

        <requestFocus />
 
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >





        <Button
            android:id="@+id/b_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="onOkClicked"
            android:text="@string/ok" />




        <Button
            android:id="@+id/b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="onCancelClicked"
            android:text="@string/cancel" />

    </RelativeLayout>

</LinearLayout>